<resources>
    <string name="app_name">我的应用</string>
    <string name="action_settings">手机信息</string>
    <string name="action_about">关于软件</string>
    <string name="action_x1">新手引导</string>
    <string name="action_x2">QQ联系作者</string>
    <string name="action_x3">微信联系作者</string>
    <string name="action_x4">待定4</string>
    <string name="action_x5">待定5</string>
    <string name="action_admin">我不会伤害你的，放心 </string>



    <string name="app_activity_2">第二个Activity</string>
    <string name="app_activity_3">第三个Activity</string>
    <string name="app_activity_4">第四个Activity</string>
    <string name="app_activity_5">第五个Activity</string>
    <string name="app_activity_6">第六个Activity</string>
    <string name="app_activity_7">第七个Activity</string>
    <string name="app_activity_8">第八个Activity</string>
    <string name="app_activity_9">第九个Activity</string>
    <string name="app_activity_10">第十个Activity</string>
    <string name="app_activity_11">第十一个Activity</string>
    <string name="app_activity_12">第十二个Activity</string>
    <string name="app_activity_13">第十三个Activity</string>
    <string name="app_activity_14">第十四个Activity</string>
    <string name="app_activity_15">第十五个Activity</string>
    <string name="app_activity_16">第十六个Activity</string>
    <string name="app_activity_17">第十七个Activity</string>
    <string name="app_activity_18">第十八个Activity</string>
    <string name="app_activity_19">第十九个Activity</string>
    <string name="app_activity_20">第二十个Activity</string>


    <string name="app_about_main">这是应用的第一个界面\n
  1.本程序<u>首次运行</u>会提示“欢迎使用我的应用”，另外用户每次在编辑框中输入的字符会在下次打开程序时自动填充。\n
  2.每次打开程序第一条文字显示“hello modified”，在滑动选择时会显示当前选中的<b>时间</b>（当时间为11:11时会有奇妙的事情发生），也可以显示<b>单选按钮</b>被选中，还可以显示<b>左侧按钮</b>被点击（当次数达到100时也会有奇妙的事情发生），还可以显示<b>中间的多选按钮</b>被点击。另外，<b>长按</b>该文本会弹出上下文菜单。\n
第二条文字显示多选框的<b>点击</b>状态。\n
第三条文字显示多选框的<b>选中</b>状态。\n
  3.<b>右上的开关</b>点击后会弹出对话框，如果选择“确定”直接退出软件。\n
<b>右上角</b>是菜单项（按菜单键也可以），其中“<b>待定4</b>”、“<b>待定5</b>”点击后只有提示，“<b>子菜单</b>”点击后进入子菜单，点击后没有任何反应。“<b>手机信息</b>”、“<b>关于软件</b>”、“<b>新手引导</b>”这几个顾名思义不再解释，“<b>QQ联系作者</b>”自动打开与作者的聊天窗口（如果没有安装QQ会有提示），“<b>微信联系作者</b>”会自动打开微信并将作者微信号复制到系统剪切板（如果没有安装微信会有提示）\n
  4.<b>中间的多选按钮</b>被选中时会自动选中测试按钮A，提示“警告”，并且当被点击10次时会退出本软件。\n
<b>右侧多选按钮B</b>选中会打开辅助功能。\n
<b>进度条</b>显示的是左侧按钮被点击的次数。\n
左下方的<b>单选按钮A</b>被选中后会打开设备管理器列表\n
浮动的红色邮件<b>按钮</b>点击后也是只会有提示。\n
  5.用户名和密码输入错误也会有提示，输入正确时（<i>admin&#160;&#160;&#160;&#160;&#160;&#160;123456</i>）可以<b>打开相机</b>，但不存储拍的照片。</string>

    <string name="app_about_test">这是程序的主要测试界面\n
  1.<b>最上面的文字</b>主要是为了测试英文字母的对齐方式，没有其他功能；下方是一个<b>时间的控件</b>，没有为它设置什么东西，只是单纯觉得它比较好看而已；再下面的两条文字显示的是界面跳转到该页面时已经在主页面点击的按钮的次数和选择的时间。\n
  2.多选框“<b>执行程序锁</b>”选中后会以服务的形式每隔5秒钟检测一下显示在前台的应用并把包名显示出来。\n
  3.“<b>下拉列表</b>”就是最常见的一类，点击后会进入界面，有许多的列表，不过选择之后也没有任何响应；“<b>开启服务</b>”和“<b>结束服务</b>”是“<b>执行程序锁</b>”的子功能，就是只执行检测一次；“<b>提示</b>”点击之后的界面中上面是一个会自动提示的编辑框（尝试输入hello、我们），下面是两个按钮，当点击“<b>大</b>”时，图片会变大，当点击“<b>小</b>”时，图片会变小（可以一直变小，直到······）\n
  4.“<b>图库</b>”点击后会进入一个左右滑动来切换图片的界面；“<b>网格视图</b>”点击后会进入一个类似相册的界面，点击图片之后会显示提示；“<b>网络视图</b>”点击之后会进入我的网站\n
		http://www.whuzfb.cn/\n
“<b>标签</b>”点击之后进入新手引导的界面\n
  5.“<b>位图</b>”点击之后的界面会有一个滑稽，在拖动进度条之后滑稽会消失，取而代之的是一个随滑动条而变化的图片；“<b>对话框</b>”点击之后会弹出一个具有三个按钮的对话框，点击任意一个都会有提示；“<b>进度对话</b>”点击后会显示一个带进度的对话框，每隔1S增加3%，在此过程中可以随时点击一下屏幕任意位置来使对话框消失；“<b>通知</b>”点击之后会以系统的默认提示音在通知栏显示一个通知，你可以在任意位置通过点击本通知来跳转到本应用程序的主界面（注意要允许本应用发送通知）\n
  6.“<b>事件响应</b>”点击之后会进入一个界面，当手指按在屏幕上时，文字为红色，当手指在屏幕上移动时，文字为绿色，当手指从屏幕抬起以后，文字保持蓝色，三个按钮没有任何作用，在这个页面点击返回键会有提示；“<b>内置程序</b>”点击之后进入隐私界面，下一个页面会有详细介绍；“<b>设备管理器</b>”点击之后进入激活设备管理器界面等待用户激活。如果激活设备管理器以后，那么这个按钮将会变为“<b>锁屏</b>”（立即关闭屏幕，不会更改锁屏密码）、而且后面的按钮也会由“<b>测试</b>”（点击无任何反应）变为“<b>5S锁屏</b>”（<u>将自动锁屏时间改为无操作后5秒</u>，也不会更改锁屏密码）
    </string>

    <string name="app_about_private">这是涉及到用户隐私的一个界面，<em>应用申请的绝大多数权限都将在这个界面被用到</em>。\n
  1.打开界面会有提示，因为“<b>呼叫</b>”按钮需要拨打电话的权限，“<b>发送</b>”按钮需要有发送短信的权限，“<b>开始录音</b>”需要有录音的权限，“<b>打开摄像头</b>”需要有访问相机的权限。另外，打开该界面时会自动备份收件箱短信到<i>/sdcard/sms_inbox.txt</i>文件（不备份发件人号码以9或10开头的，也不备份发件人号码的位数大于14的），当然，如果应用没有这些权限，这个文件就只有一句提示了。\n
  2.在第一个编辑框输入电话号码，按下“<b>拨号</b>”会跳转到拨号盘等待用户点击呼叫，按下“<b>呼叫</b>”可以直接呼叫该号码；在第二、三个编辑框分别输入电话和信息内容，点击“<b>发送</b>”可以将信息发送到指定收件人\n
  3.点击下方按钮可以获取手机当前电量；点击“<b>播放音乐</b>”会自动播放<i>/sdcard/Music/test.mp3</i>，如果想去测试的话，需要手动在该目录下放置该文件，播放过程中可以在第一个进度条调节媒体音量，第二个进度条调节歌曲进度；点击“<b>本地资源</b>”会播放软件内置的音频文件，同样可以调节音量和进度；点击“<b>网络资源</b>”会播放\n
  http://music.163.com/m/song?id=19144617\n
不过具体能否成功还不能保证；点击“<b>服务</b>”会在后台播放<i>/sdcard/Music/test.mp3</i>（就是当离开该界面以后仍然可以继续播放）。需要注意的是，这四个按钮中，<u>同一个按钮不要多次点击，这样会造成同时播放好几个音频，声音会比较混乱</u>\n
  4.点击“<b>开始录音</b>”的按钮之后会有一个记录时间的（如果应用没有录音的权限会录制一个0.00B的空的音频文件），点击“<b>结束录音</b>”就可以停止本次录音并将音频文件存储在<i>/sdcard/myAudioRecords/</i>目录下。\n
  5.在本应用有访问摄像头权限的情况下点击“<b>打开摄像头</b>”会在上分显示预览界面（前置摄像头），点击“<b>拍照</b>”会将照片存储在<i>/sdcard/myImageRecords/</i>目录下，点击“<b>关闭摄像头</b>”预览界面会停留在点击按钮时刻的摄像头的画面。\n
  6.<u>只要应用程序没有被系统关掉的情况下，应用会在收到短信时提示短信内容</u>\n
    </string>

    <string-array name="web">
        <item>点击选择</item>
        <item>课程表</item>
        <item>个人信息</item>
        <item>成绩</item>
    </string-array>

    <string-array name="subject">
        <item>程序设计基础</item>
        <item>乒乓球（初级）</item>
        <item>军事理论</item>
        <item>大学英语2</item>
        <item>线性代数B</item>
        <item>高等数学B1</item>
        <item>近现代史纲要</item>
        <item>思修</item>
        <item>电路分析</item>
        <item>工程制图</item>
        <item>面向对象程序设计</item>
        <item>乒乓球（高级）</item>
        <item>大学英语3</item>
        <item>高等数学B2</item>
        <item>大学物理B（上）</item>
        <item>大学物理实验B</item>
        <item>马克思主义原理概论</item>
        <item>低频电子线路</item>
        <item>电子技术试验（1）</item>
        <item>电子技术试验（2）</item>
        <item>工程随机数学</item>
        <item>数学物理方法</item>
        <item>数字逻辑电路</item>
        <item>工程训练2</item>
        <item>科学研究中的伦理与道德</item>
        <item>跆拳道（初级）</item>
        <item>大学英语4</item>
        <item>大学物理B（下）</item>
        <item>毛泽东思想和中特理论概论</item>
    </string-array>
</resources>
