<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.whuzfb.myapplication.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_x1"
        android:orderInCategory="100"
        android:title="@string/action_x1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_x2"
        android:orderInCategory="100"
        android:title="@string/action_x2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_x3"
        android:orderInCategory="100"
        android:title="@string/action_x3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_x4"
        android:orderInCategory="100"
        android:title="@string/action_x4"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_x5"
        android:orderInCategory="100"
        android:title="@string/action_x5"
        app:showAsAction="never" />

</menu>
